--- a/Dockerfile.hardware
+++ b/Dockerfile.hardware
@@ -26,17 +26,18 @@ RUN rm -rf src/rosbot_xl_gazebo && \
         python3-pip \
         python3-colcon-common-extensions \
         python3-rosdep \
+        python3-vcstool \
         ros-${ROS_DISTRO}-rmw-fastrtps-cpp \
         curl \
         git && \
     apt-get upgrade -y && \
     # build & install ROSbot XL packages
     source "/opt/ros/$ROS_DISTRO/setup.bash" && \
+    vcs import src < src/rosbot_xl/rosbot_xl_hardware.repos && \
     rosdep init && \
     rosdep update --rosdistro $ROS_DISTRO && \
     rosdep install -i --from-path src --rosdistro $ROS_DISTRO -y && \
-    git clone https://github.com/husarion/rosbot_hardware_interfaces.git && \
-    colcon build --symlink-install && \
+    colcon build --packages-up-to rosbot_xl && \
     # download a firmware binary release
     curl -L https://github.com/husarion/rosbot_xl_firmware/releases/download/v0.0.1/firmware.bin -o /firmware.bin && \
     # make the image smaller
@@ -45,6 +46,7 @@ RUN rm -rf src/rosbot_xl_gazebo && \
         python3-pip \
         python3-colcon-common-extensions \
         python3-rosdep \
+        python3-vcstool \
         curl \
         git && \       
     apt-get autoremove -y && \
