--- a/src/rosbot_xl_description/package.xml
+++ b/src/rosbot_xl_description/package.xml
@@ -20,6 +20,8 @@
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>xacro</exec_depend>
+  <exec_depend>rosbot_hardware_interfaces</exec_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
