Remove reference to worlds directory

--- a/src/rosbot_xl_gazebo/CMakeLists.txt
+++ b/src/rosbot_xl_gazebo/CMakeLists.txt
@@ -17,7 +17,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 
 install(
-  DIRECTORY launch worlds
+  DIRECTORY launch
   DESTINATION share/${PROJECT_NAME}
 )
 
