--- a/src/rosbot_xl_bringup/package.xml
+++ b/src/rosbot_xl_bringup/package.xml
@@ -9,8 +9,8 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <exec_depend>rosbot_xl_kinematics</exec_depend>
   <exec_depend>rosbot_xl_description</exec_depend>
+  <exec_depend>rosbot_xl_hardware</exec_depend>
   
   <exec_depend>laser_filters</exec_depend>
   <exec_depend>robot_localization</exec_depend>
