--- a/src/rosbot_xl_description/package.xml
+++ b/src/rosbot_xl_description/package.xml
@@ -3,11 +3,20 @@
 <package format="3">
   <name>rosbot_xl_description</name>
   <version>0.0.1</version>
+
   <description>The rosbot_xl_description package</description>
-  <maintainer email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</maintainer>
   <license>Apache License 2.0</license>
 
+  <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>
+  <author email="maciej.stepien@husarion.com">Maciej Stepien</author>
+  <maintainer email="contact@husarion.com">Husarion</maintainer>
+
+  <url type="website">https://husarion.com/</url>
+  <url type="repository">https://github.com/husarion/rosbot_xl_ros</url>
+  <url type="bugtracker">https://github.com/husarion/rosbot_xl_ros/issues</url>
+
   <buildtool_depend>ament_cmake</buildtool_depend>
+
   <build_depend>controller_manager</build_depend>
   <build_depend>joint_state_broadcaster</build_depend>
   <build_depend>joint_state_publisher</build_depend>
