--- a/src/rosbot_xl_hardware/package.xml
+++ b/src/rosbot_xl_hardware/package.xml
@@ -2,10 +2,18 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>rosbot_xl_hardware</name>
-  <version>1.0.0</version>
+  <version>0.0.1</version>
+
   <description>Hardware configuration for ROSbot XL</description>
-  <maintainer email="contact@husarion.com">Husarion</maintainer>
   <license>Apache License 2.0</license>
+  
+  <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>
+  <author email="maciej.stepien@husarion.com">Maciej Stepien</author>
+  <maintainer email="contact@husarion.com">Husarion</maintainer>
+
+  <url type="website">https://husarion.com/</url>
+  <url type="repository">https://github.com/husarion/rosbot_xl_ros</url>
+  <url type="bugtracker">https://github.com/husarion/rosbot_xl_ros/issues</url>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
