Move gazebo controllers to gazebo package

--- a/src/rosbot_xl_gazebo/CMakeLists.txt
+++ b/src/rosbot_xl_gazebo/CMakeLists.txt
@@ -4,6 +4,7 @@ project(rosbot_xl_gazebo)
 find_package(ament_cmake REQUIRED)
 
 install(DIRECTORY
+  config
   launch
   DESTINATION share/${PROJECT_NAME}
 )
