Refactor rosbot xl description

--- a/rosbot_xl_description/CMakeLists.txt
+++ b/rosbot_xl_description/CMakeLists.txt
@@ -4,7 +4,8 @@ project(rosbot_xl_description)
 find_package(ament_cmake REQUIRED)
 
 install(DIRECTORY
-  models
+  meshes
+  urdf
   DESTINATION share/${PROJECT_NAME}
 )
 
