Rename wheel joints

--- a/rosbot_xl_gazebo/config/controllers.yaml
+++ b/rosbot_xl_gazebo/config/controllers.yaml
@@ -9,8 +9,8 @@ controller_manager:
 
 rosbot_xl_base_controller:
   ros__parameters:
-    left_wheel_names: ["front_left_wheel_joint", "rear_left_wheel_joint"]
-    right_wheel_names: ["front_right_wheel_joint", "rear_right_wheel_joint"]
+    left_wheel_names: ["fl_wheel_joint", "rl_wheel_joint"]
+    right_wheel_names: ["fr_wheel_joint", "rr_wheel_joint"]
 
     wheel_separation: 0.252
     wheel_radius: 0.05
