--- a/rosbot_xl_hardware/config/diff_drive_controller.yaml
+++ b/rosbot_xl_hardware/config/diff_drive_controller.yaml
@@ -24,16 +24,16 @@ hardware_node:
     # order of velocity commands to be published in motors_cmd Float32MultiArray msg
     velocity_command_joint_order:
       [
-        "rear_right_wheel_joint",
-        "rear_left_wheel_joint",
-        "front_right_wheel_joint",
-        "front_left_wheel_joint",
+        "rr_wheel_joint",
+        "rl_wheel_joint",
+        "fr_wheel_joint",
+        "fl_wheel_joint",
       ]
 
 rosbot_xl_base_controller:
   ros__parameters:
-    left_wheel_names: ["front_left_wheel_joint", "rear_left_wheel_joint"]
-    right_wheel_names: ["front_right_wheel_joint", "rear_right_wheel_joint"]
+    left_wheel_names: ["fl_wheel_joint", "rl_wheel_joint"]
+    right_wheel_names: ["fr_wheel_joint", "rr_wheel_joint"]
 
     wheel_separation: 0.252
     wheel_radius: 0.048
