--- a/rosbot_xl_hardware/config/mecanum_drive_controller.yaml
+++ b/rosbot_xl_hardware/config/mecanum_drive_controller.yaml
@@ -24,18 +24,18 @@ hardware_node:
     # order of velocity commands to be published in motors_cmd Float32MultiArray msg
     velocity_command_joint_order:
       [
-        "rear_right_wheel_joint",
-        "rear_left_wheel_joint",
-        "front_right_wheel_joint",
-        "front_left_wheel_joint",
+        "rr_wheel_joint",
+        "rl_wheel_joint",
+        "fr_wheel_joint",
+        "fl_wheel_joint",
       ]
 
 rosbot_xl_base_controller:
   ros__parameters:
-    front_left_wheel_name: front_left_wheel_joint
-    front_right_wheel_name: front_right_wheel_joint
-    rear_left_wheel_name: rear_left_wheel_joint
-    rear_right_wheel_name: rear_right_wheel_joint
+    fl_wheel_name: fl_wheel_joint
+    fr_wheel_name: fr_wheel_joint
+    rl_wheel_name: rl_wheel_joint
+    rr_wheel_name: rr_wheel_joint
 
     wheel_separation_x: 0.170
     wheel_separation_y: 0.252
