--- a/rosbot_xl_hardware/config/mecanum_drive_controller.yaml
+++ b/rosbot_xl_hardware/config/mecanum_drive_controller.yaml
@@ -16,10 +16,10 @@ imu_broadcaster:
 
 rosbot_xl_base_controller:
   ros__parameters:
-    fl_wheel_name: fl_wheel_joint
-    fr_wheel_name: fr_wheel_joint
-    rl_wheel_name: rl_wheel_joint
-    rr_wheel_name: rr_wheel_joint
+    front_left_wheel_name: fl_wheel_joint
+    front_right_wheel_name: fr_wheel_joint
+    rear_left_wheel_name: rl_wheel_joint
+    rear_right_wheel_name: rr_wheel_joint
 
     wheel_separation_x: 0.170
     wheel_separation_y: 0.252
