Add manual workflow dispatch

--- a/.github/workflows/bump_version.yaml
+++ b/.github/workflows/bump_version.yaml
@@ -1,5 +1,11 @@
 name: Bump version
 on:
+  workflow_dispatch:
+    inputs:
+      name:
+        description: "Version to bump (major, minor, patch)"
+        default: "patch"
+        required: true
   pull_request:
     branches: master
     types: [closed]
@@ -9,12 +15,16 @@ jobs:
     name: Get version bump
     runs-on: ubuntu-latest
     outputs:
-      bump: ${{ steps.get-version-bump.outputs.bump }}
+      bump: ${{ env.BUMP }}
     steps:
       - if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
         name: Get version bump
         id: get-version-bump
         uses: husarion-ci/action-get-version-bump@v0.3.0
+      - if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
+        run: echo "BUMP=${{ steps.get-version-bump.outputs.bump }}" >> $GITHUB_ENV
+      - if: github.event_name == 'workflow_dispatch'
+        run: echo "BUMP=${{ github.event.inputs.name }}" >> $GITHUB_ENV
 
   catkin-release:
     name: Bump version
