--- a/rosbot_xl_gazebo/config/diff_drive_controller.yaml
+++ b/rosbot_xl_gazebo/config/diff_drive_controller.yaml
@@ -1,19 +1,42 @@
+# Separate controller file for simulation is necessary, because it is basically the only way to use_sim_time 
+# in controller manager (and loaded controllers) created by ign_ros2_control
+# Another required mmodification was position_feedback parameter (as described below)
+
+ignition_ros_control:
+  ros__parameters:
+    use_sim_time: true
+
 controller_manager:
   ros__parameters:
-    update_rate: 100 # Hz
+    use_sim_time: true
+
+    update_rate: 25 # Hz
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
     rosbot_xl_base_controller:
       type: diff_drive_controller/DiffDriveController
+    imu_broadcaster:
+      type: imu_sensor_broadcaster/IMUSensorBroadcaster
+
+joint_state_broadcaster:
+  ros__parameters:
+    use_sim_time: true
+
+imu_broadcaster:
+  ros__parameters:
+    use_sim_time: true
+    sensor_name: "imu"
+    frame_id: "imu_link"
 
 rosbot_xl_base_controller:
   ros__parameters:
+    use_sim_time: true
     left_wheel_names: ["fl_wheel_joint", "rl_wheel_joint"]
     right_wheel_names: ["fr_wheel_joint", "rr_wheel_joint"]
 
     wheel_separation: 0.252
-    wheel_radius: 0.05
+    wheel_radius: 0.048
 
     # For skid drive kinematics it will act as ICR coefficient
     # Kinematic model with ICR coefficient isn't totally accurate and this coefficient can differ
@@ -24,7 +47,7 @@ rosbot_xl_base_controller:
     right_wheel_radius_multiplier: 1.0
 
     # Feedback from motors is published at around 20 Hz
-    publish_rate: 50.0
+    publish_rate: 25.0
     odom_frame_id: odom
     base_frame_id: base_link
     pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.01]
@@ -33,14 +56,17 @@ rosbot_xl_base_controller:
     # Whether to use feedback or commands for odometry calculations
     open_loop: false
 
-    # Update odometry from position (at the time of writing velocity update is still bugged)
+    # Update odometry from position - velocity feedback won't work in simulation, because unit is rad/s
+    # and diff drive controller require m/s (https://github.com/ros-controls/ros2_controllers/pull/452)
     position_feedback: true
-    enable_odom_tf: true
+    # velocity computation filtering
+    velocity_rolling_window_size: 1
+
+    enable_odom_tf: false
 
     cmd_vel_timeout: 0.5
     #publish_limited_velocity: true
     use_stamped_vel: false
-    #velocity_rolling_window_size: 10
 
     # Velocity and acceleration limits
     # Whenever a min_* is unspecified, default to -max_*
@@ -49,9 +75,10 @@ rosbot_xl_base_controller:
         has_velocity_limits: true
         has_acceleration_limits: true
         has_jerk_limits: false
-        max_velocity: 0.5 # m/s
+        # top speed is around 1.2m/s
+        max_velocity: 0.9 # m/s
         # min_velocity -  When unspecified, -max_velocity is used
-        max_acceleration: 0.5 # m/s^2
+        max_acceleration: 1.0 # m/s^2
         # min_acceleration - When unspecified, -max_acceleration is used.
         max_jerk: 0.0 # m/s^3
 
@@ -60,7 +87,7 @@ rosbot_xl_base_controller:
         has_velocity_limits: true
         has_acceleration_limits: true
         has_jerk_limits: false
-        max_velocity: 1.0 # rad/s
+        max_velocity: 3.0 # rad/s
         # min_velocity -  When unspecified, -max_velocity is used
         max_acceleration: 4.0 # rad/s^2
         # min_acceleration - When unspecified, -max_acceleration is used.
