--- a/rosbot_xl_hardware/package.xml
+++ b/rosbot_xl_hardware/package.xml
@@ -22,6 +22,9 @@
   <exec_depend>controller_manager</exec_depend>
   <exec_depend>diff_drive_controller</exec_depend>
   <exec_depend>imu_sensor_broadcaster</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>joint_state_broadcaster</exec_depend>
+  <exec_depend>ros2_controllers</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
