--- a/rosbot_xl_hardware/config/diff_drive_controller.yaml
+++ b/rosbot_xl_hardware/config/diff_drive_controller.yaml
@@ -1,5 +1,24 @@
+simulation_ignition_ros_control:
+  ros__parameters:
+    use_sim_time: true
+
+# Separate controller manager used for simulation - only difference is 
+# the use_sim_time parameter (it is the easiest way to do it with ign ros2 control)  
+simulation_controller_manager:
+  ros__parameters:
+    use_sim_time: true
+    update_rate: 25 # Hz
+
+    joint_state_broadcaster:
+      type: joint_state_broadcaster/JointStateBroadcaster
+    rosbot_xl_base_controller:
+      type: diff_drive_controller/DiffDriveController
+    imu_broadcaster:
+      type: imu_sensor_broadcaster/IMUSensorBroadcaster
+
 controller_manager:
   ros__parameters:
+    use_sim_time: false
     update_rate: 25 # Hz
 
     joint_state_broadcaster:
@@ -41,7 +60,6 @@ rosbot_xl_base_controller:
     open_loop: false
 
     # Update odometry from velocity
-    #! IMPORTANT at the time of writing it is bugged on deb galactic version and require fork of diff drive controller installed from sources
     # in sensor fusion only velocity is used and with this setting it is more accurate
     position_feedback: false
     # velocity computation filtering
