--- a/rosbot_xl_bringup/package.xml
+++ b/rosbot_xl_bringup/package.xml
@@ -16,9 +16,11 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <exec_depend>rosbot_xl_description</exec_depend>
   <exec_depend>rosbot_xl_hardware</exec_depend>
   
+  <exec_depend>launch</exec_depend>
+  <exec_depend>launch_ros</exec_depend>
+
   <exec_depend>laser_filters</exec_depend>
   <exec_depend>robot_localization</exec_depend>
 
