--- a/rosbot_xl_gazebo/package.xml
+++ b/rosbot_xl_gazebo/package.xml
@@ -17,38 +17,18 @@
   
   <buildtool_depend>ament_cmake</buildtool_depend>
   
-  <build_depend>rosbot_xl_description</build_depend>
-
-  <exec_depend>rosbot_xl_description</exec_depend>
-
-  <!-- Ignition Fortress -->
-  <exec_depend>ignition-gazebo6</exec_depend>
-  <exec_depend>ros_ign_gazebo</exec_depend>
-  <exec_depend>ros_ign_bridge</exec_depend>
-  <exec_depend>ign_ros2_control</exec_depend>
-  <exec_depend>ignition-plugin</exec_depend>
-
-  <exec_depend>controller_interface</exec_depend>
-  <exec_depend>hardware_interface</exec_depend>
+  <exec_depend>rosbot_xl_bringup</exec_depend>
 
   <exec_depend>launch</exec_depend>
   <exec_depend>launch_ros</exec_depend>
 
-  <exec_depend>robot_state_publisher</exec_depend>
-  <exec_depend>urdf</exec_depend>
-  <exec_depend>xacro</exec_depend>
-
-  <exec_depend>pluginlib</exec_depend>
-  
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>geometry_msgs</exec_depend>
-  <exec_depend>control_msgs</exec_depend>
-  
-  <exec_depend>controller_manager</exec_depend>
-  <exec_depend>effort_controllers</exec_depend>
-  <exec_depend>velocity_controllers</exec_depend>
-  <exec_depend>diff_drive_controller</exec_depend>
-  <exec_depend>joint_state_broadcaster</exec_depend>
+  <exec_depend>husarion_office_gz</exec_depend>
+  <exec_depend>ros_gz_sim</exec_depend>
+  <!-- Ignition dependency is specified in the ros_gz_sim package, 
+    version can chosen using GZ_VERSION (or IGNITION_VERSION) env variable, 
+    for details refer to the ros_gz_sim package -->
+  <exec_depend>ros_gz_bridge</exec_depend>
+  <exec_depend>ign_ros2_control</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
