--- a/rosbot_xl/package.xml
+++ b/rosbot_xl/package.xml
@@ -21,7 +21,7 @@
 
   <depend>rosbot_xl_bringup</depend>
   <depend>rosbot_xl_description</depend>
-  <depend>rosbot_xl_hardware</depend>
+  <depend>rosbot_xl_controller</depend>
 
   <depend condition="$ROSBOT_XL_ROS_BUILD == simulation">rosbot_xl_gazebo</depend>
 
