--- a/rosbot_xl_description/package.xml
+++ b/rosbot_xl_description/package.xml
@@ -19,6 +19,8 @@
 
   <build_depend>xacro</build_depend>
   <exec_depend>xacro</exec_depend>
+  
+  <exec_depend>ros_components_description</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
