Change rosbot xl hardware to controller

--- a/rosbot_xl_controller/CMakeLists.txt
+++ b/rosbot_xl_controller/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10.2)
-project(rosbot_xl_hardware)
+project(rosbot_xl_controller)
 
 find_package(ament_cmake REQUIRED)
 
