Update maintainer emails

--- a/rosbot_xl_description/package.xml
+++ b/rosbot_xl_description/package.xml
@@ -10,7 +10,7 @@
   <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>
   <author email="maciej.stepien@husarion.com">Maciej Stepien</author>
   <author email="jakub.delicat@husarion.com">Jakub Delicat</author>
-  <maintainer email="contact@husarion.com">Husarion</maintainer>
+  <maintainer email="support@husarion.com">Husarion</maintainer>
 
   <url type="website">https://husarion.com/</url>
   <url type="repository">https://github.com/husarion/rosbot_xl_ros</url>
