--- a/rosbot_xl_bringup/package.xml
+++ b/rosbot_xl_bringup/package.xml
@@ -8,7 +8,7 @@
   <license>Apache License 2.0</license>
 
   <author email="maciej.stepien@husarion.com">Maciej Stepien</author>
-  <maintainer email="contact@husarion.com">Husarion</maintainer>
+  <maintainer email="support@husarion.com">Husarion</maintainer>
 
   <url type="website">https://husarion.com/</url>
   <url type="repository">https://github.com/husarion/rosbot_xl_ros</url>
