--- a/rosbot_xl_gazebo/package.xml
+++ b/rosbot_xl_gazebo/package.xml
@@ -9,7 +9,7 @@
 
   <author email="maciej.stepien@husarion.com">Maciej Stępień</author>
   <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>
-  <maintainer email="contact@husarion.com">Husarion</maintainer>
+  <maintainer email="support@husarion.com">Husarion</maintainer>
 
   <url type="website">https://husarion.com/</url>
   <url type="repository">https://github.com/husarion/rosbot_xl_ros</url>
