added env hook for gazebo

--- a/rosbot_xl_description/CMakeLists.txt
+++ b/rosbot_xl_description/CMakeLists.txt
@@ -9,4 +9,5 @@ install(DIRECTORY
   DESTINATION share/${PROJECT_NAME}
 )
 
+ament_environment_hooks("${CMAKE_CURRENT_SOURCE_DIR}/env-hooks/${PROJECT_NAME}.sh.in")
 ament_package()
