--- a/rosbot_xl_controller/package.xml
+++ b/rosbot_xl_controller/package.xml
@@ -9,13 +9,12 @@
 
   <author email="maciej.stepien@husarion.com">Maciej Stepien</author>
   <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>
+  <author email="jakub.delicat@husarion.com">Jakub Delicat</author>
   <maintainer email="support@husarion.com">Husarion</maintainer>
 
   <url type="website">https://husarion.com/</url>
   <url type="repository">https://github.com/husarion/rosbot_xl_ros</url>
   <url type="bugtracker">https://github.com/husarion/rosbot_xl_ros/issues</url>
-
-  <buildtool_depend>ament_cmake</buildtool_depend>
 
   <exec_depend>rosbot_xl_description</exec_depend>
 
@@ -34,6 +33,6 @@
   <exec_depend>rosbot_hardware_interfaces</exec_depend>
 
   <export>
-    <build_type>ament_cmake</build_type>
+    <build_type>ament_python</build_type>
   </export>
 </package>
