--- a/rosbot_xl_controller/package.xml
+++ b/rosbot_xl_controller/package.xml
@@ -32,6 +32,24 @@
 
   <exec_depend>rosbot_hardware_interfaces</exec_depend>
 
+  <test_depend>python3-pytest</test_depend>
+  <test_depend>launch</test_depend>
+  <test_depend>launch_ros</test_depend>
+  <test_depend>launch_pytest</test_depend>
+
+  <test_depend>xacro</test_depend>
+  <test_depend>sensor_msgs</test_depend>
+  <test_depend>nav_msgs</test_depend>
+
+  <test_depend>rosbot_xl_description</test_depend>
+  <test_depend>ros_components_description</test_depend>
+
+  <test_depend>controller_manager</test_depend>
+  <test_depend>joint_state_broadcaster</test_depend>
+  <test_depend>imu_sensor_broadcaster</test_depend>
+  <test_depend>diff_drive_controller</test_depend>
+  <test_depend>mecanum_drive_controller</test_depend>
+
   <export>
     <build_type>ament_python</build_type>
   </export>
