--- a/rosbot_xl_gazebo/package.xml
+++ b/rosbot_xl_gazebo/package.xml
@@ -39,7 +39,7 @@
   <test_depend>nav_msgs</test_depend>
   <test_depend>geometry_msgs</test_depend>
 
-  <test_depend>rosbot_bringup</test_depend>
+  <test_depend>rosbot_xl_bringup</test_depend>
 
   <export>
     <build_type>ament_python</build_type>
