--- a/.github/workflows/industrial_ci.yaml
+++ b/.github/workflows/industrial_ci.yaml
@@ -1,25 +1,24 @@
+---
 name: Industrial CI
 on:
-  workflow_call:
-  pull_request:
-  push:
-    branches:
-      - master
+    workflow_call:
+    pull_request:
+    push:
+        branches:
+            - master
 
 jobs:
-  industrial_ci:
-    strategy:
-      fail-fast: false
-      matrix:
-        ROS_DISTRO: [humble]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Clone installation requirements
-        shell: bash
-        run : python3 -m pip install -U vcstool &&
-              vcs import . < ./rosbot_xl/rosbot_xl_hardware.repos &&
-              vcs import . < ./rosbot_xl/rosbot_xl_simulation.repos
-      - uses: ros-industrial/industrial_ci@master
-        env:
-          ROS_DISTRO: ${{matrix.ROS_DISTRO}}
+    industrial_ci:
+        strategy:
+            fail-fast: false
+            matrix:
+                ROS_DISTRO: [humble]
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+            - name: Clone installation requirements
+              shell: bash
+              run: python3 -m pip install -U vcstool && vcs import . < ./rosbot_xl/rosbot_xl_hardware.repos && vcs import . < ./rosbot_xl/rosbot_xl_simulation.repos
+            - uses: ros-industrial/industrial_ci@master
+              env:
+                  ROS_DISTRO: ${{matrix.ROS_DISTRO}}
