export Simulation build
Signed-off-by: Jakub Delicat <jakub.delicat@husarion.com>

--- a/.github/workflows/industrial_ci.yaml
+++ b/.github/workflows/industrial_ci.yaml
@@ -22,3 +22,4 @@ jobs:
             - uses: ros-industrial/industrial_ci@master
               env:
                   ROS_DISTRO: ${{matrix.ROS_DISTRO}}
+                  HUSARION_ROS_BUILD: simulation
