--- a/rosbot_xl_controller/setup.cfg
+++ b/rosbot_xl_controller/setup.cfg
@@ -2,3 +2,5 @@
 script_dir=$base/lib/rosbot_xl_controller
 [install]
 install_scripts=$base/lib/rosbot_xl_controller
+[flake8]
+max-line-length = 99
