--- a/rosbot_xl_controller/setup.cfg
+++ b/rosbot_xl_controller/setup.cfg
@@ -3,5 +3,5 @@ script_dir=$base/lib/rosbot_xl_controller
 [install]
 install_scripts=$base/lib/rosbot_xl_controller
 [flake8]
-ignore=E501,W503 # ignore too long line and line break before binary operator - black checks it
+ignore = E501,W503  # Ignore "line too long" (E501) and "line break before binary operator" (W503) - black checks it
 max-line-length = 99
