--- a/.github/workflows/bump_version.yaml
+++ b/.github/workflows/bump_version.yaml
@@ -18,6 +18,7 @@ jobs:
     get-bump:
         name: Get version bump
         runs-on: ubuntu-latest
+        needs: industrial_ci
         outputs:
             bump: ${{ env.BUMP }}
         steps:
