--- a/.github/workflows/industrial_ci.yaml
+++ b/.github/workflows/industrial_ci.yaml
@@ -14,6 +14,9 @@ jobs:
         uses: ./.github/workflows/spellcheck.yaml
 
     industrial_ci:
+        needs:
+            - black_test
+            - spellcheck_test
         strategy:
             fail-fast: false
             matrix:
