--- a/.github/workflows/bump_version.yaml
+++ b/.github/workflows/bump_version.yaml
@@ -13,6 +13,7 @@ on:
 
 jobs:
     industrial_ci:
+        name: Industrial CI
         uses: ./.github/workflows/industrial_ci.yaml
 
     get-bump:
