--- a/.github/workflows/industrial_ci.yaml
+++ b/.github/workflows/industrial_ci.yaml
@@ -22,6 +22,7 @@ jobs:
             matrix:
                 ROS_DISTRO: [humble]
         runs-on: ubuntu-latest
+        timeout-minutes: 12
         steps:
             - uses: actions/checkout@v3
             - name: Clone installation requirements
