--- a/rosbot_xl_controller/config/mecanum_drive_controller.yaml
+++ b/rosbot_xl_controller/config/mecanum_drive_controller.yaml
@@ -32,6 +32,10 @@ imu_broadcaster:
   ros__parameters:
     sensor_name: "imu"
     frame_id: "imu_link"
+    static_covariance_orientation: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
+    static_covariance_angular_velocity: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0e-3] # Values based on diff_drive
+    static_covariance_linear_acceleration: [6.4e-2, 0.0, 0.0, 2.2e-2, 0.0, 0.0, 0.0, 0.0, 0.0] # Values based on diff_drive
+
 
 rosbot_xl_base_controller:
   ros__parameters:
@@ -54,7 +58,7 @@ rosbot_xl_base_controller:
     odom_frame_id: odom
     base_frame_id: base_link
     pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.01]
-    twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.01]
+    twist_covariance_diagonal: [3.3e-5, 3.3e-5, 0.0, 0.0, 0.0, 2.8e-3] # Values measured experimentally
 
     # Whether to use feedback or commands for odometry calculations
     open_loop: false
