--- a/rosbot_xl_controller/config/mecanum_drive_controller.yaml
+++ b/rosbot_xl_controller/config/mecanum_drive_controller.yaml
@@ -58,7 +58,7 @@ rosbot_xl_base_controller:
     odom_frame_id: odom
     base_frame_id: base_link
     pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.01]
-    twist_covariance_diagonal: [3.3e-5, 3.3e-5, 0.0, 0.0, 0.0, 2.8e-3] # Values measured experimentally
+    twist_covariance_diagonal: [3.3e-5, 3.3e-5, 0.0, 0.0, 0.0, 2.8e-3] # Values based on diff_drive
 
     # Whether to use feedback or commands for odometry calculations
     open_loop: false
