--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,7 +35,7 @@ repos:
       rev: 23.10.1
       hooks:
         - id: black
-          args: ["--line-length=99", "--experimental-string-processing"]
+          args: ["--line-length=99", "--preview"]
 
     - repo: https://github.com/PyCQA/flake8
       rev: 6.1.0
