--- a/rosbot_xl_controller/config/diff_drive_controller.yaml
+++ b/rosbot_xl_controller/config/diff_drive_controller.yaml
@@ -4,7 +4,7 @@ simulation_ignition_ros_control:
 
 # Separate controller manager used for simulation - only difference is
 # the use_sim_time parameter (it is the easiest way to do it with ign ros2 control)
-simulation_controller_manager:
+/**/simulation_controller_manager:
   ros__parameters:
     use_sim_time: true
     update_rate: 25 # Hz
@@ -16,7 +16,7 @@ simulation_controller_manager:
     imu_broadcaster:
       type: imu_sensor_broadcaster/IMUSensorBroadcaster
 
-controller_manager:
+/**/controller_manager:
   ros__parameters:
     use_sim_time: false
     update_rate: 25 # Hz
@@ -28,16 +28,18 @@ controller_manager:
     imu_broadcaster:
       type: imu_sensor_broadcaster/IMUSensorBroadcaster
 
-imu_broadcaster:
+/**/imu_broadcaster:
   ros__parameters:
-    sensor_name: "imu"
-    frame_id: "imu_link"
+    tf_frame_prefix_enable: True
+    sensor_name: imu
+    frame_id: imu_link
     static_covariance_orientation: [1.9e-3, 0.0, 0.0, 0.0, 1.9e-3, 0.0, 0.0, 0.0, 1.9e-3] # Values taken from datasheet
     static_covariance_angular_velocity: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0e-3] # Values measured experimentally
     static_covariance_linear_acceleration: [6.4e-2, 0.0, 0.0, 0.0, 2.2e-2, 0.0, 0.0, 0.0, 0.0] # Values measured experimentally
 
-rosbot_xl_base_controller:
+/**/rosbot_xl_base_controller:
   ros__parameters:
+    tf_frame_prefix_enable: True
     left_wheel_names: ["fl_wheel_joint", "rl_wheel_joint"]
     right_wheel_names: ["fr_wheel_joint", "rr_wheel_joint"]
 
