added fixed namespaces to description and controller
Signed-off-by: Jakub Delicat <jakub.delicat@husarion.com>

--- a/rosbot_xl_controller/config/diff_drive_controller.yaml
+++ b/rosbot_xl_controller/config/diff_drive_controller.yaml
@@ -1,21 +1,3 @@
-simulation_ignition_ros_control:
-  ros__parameters:
-    use_sim_time: true
-
-# Separate controller manager used for simulation - only difference is
-# the use_sim_time parameter (it is the easiest way to do it with ign ros2 control)
-/**/simulation_controller_manager:
-  ros__parameters:
-    use_sim_time: true
-    update_rate: 25 # Hz
-
-    joint_state_broadcaster:
-      type: joint_state_broadcaster/JointStateBroadcaster
-    rosbot_xl_base_controller:
-      type: diff_drive_controller/DiffDriveController
-    imu_broadcaster:
-      type: imu_sensor_broadcaster/IMUSensorBroadcaster
-
 /**/controller_manager:
   ros__parameters:
     use_sim_time: false
@@ -30,7 +12,8 @@ simulation_ignition_ros_control:
 
 /**/imu_broadcaster:
   ros__parameters:
-    tf_frame_prefix_enable: True
+    tf_frame_prefix_enable: false
+    use_namespace_as_sensor_name_prefix: true
     sensor_name: imu
     frame_id: imu_link
     static_covariance_orientation: [1.9e-3, 0.0, 0.0, 0.0, 1.9e-3, 0.0, 0.0, 0.0, 1.9e-3] # Values taken from datasheet
@@ -39,7 +22,7 @@ simulation_ignition_ros_control:
 
 /**/rosbot_xl_base_controller:
   ros__parameters:
-    tf_frame_prefix_enable: True
+    tf_frame_prefix_enable: false
     left_wheel_names: ["fl_wheel_joint", "rl_wheel_joint"]
     right_wheel_names: ["fr_wheel_joint", "rr_wheel_joint"]
 
