--- a/rosbot_xl_controller/config/mecanum_drive_controller.yaml
+++ b/rosbot_xl_controller/config/mecanum_drive_controller.yaml
@@ -1,21 +1,3 @@
-simulation_ignition_ros_control:
-  ros__parameters:
-    use_sim_time: true
-
-# Separate controller manager used for simulation - only difference is
-# the use_sim_time parameter (it is the easiest way to do it with ign ros2 control)
-/**/simulation_controller_manager:
-  ros__parameters:
-    use_sim_time: true
-    update_rate: 25 # Hz
-
-    joint_state_broadcaster:
-      type: joint_state_broadcaster/JointStateBroadcaster
-    rosbot_xl_base_controller:
-      type: mecanum_drive_controller/MecanumDriveController
-    imu_broadcaster:
-      type: imu_sensor_broadcaster/IMUSensorBroadcaster
-
 /**/controller_manager:
   ros__parameters:
     use_sim_time: false
@@ -30,7 +12,9 @@ simulation_ignition_ros_control:
 
 /**/imu_broadcaster:
   ros__parameters:
-    tf_frame_prefix_enable: True
+    tf_frame_prefix_enable: false
+    use_namespace_as_sensor_name_prefix: true
+
     sensor_name: imu
     frame_id: imu_link
     static_covariance_orientation: [1.9e-3, 0.0, 0.0, 0.0, 1.9e-3, 0.0, 0.0, 0.0, 1.9e-3] # Values taken from datasheet
@@ -39,7 +23,7 @@ simulation_ignition_ros_control:
 
 /**/rosbot_xl_base_controller:
   ros__parameters:
-    tf_frame_prefix_enable: True
+    tf_frame_prefix_enable: false
     front_left_wheel_name: fl_wheel_joint
     front_right_wheel_name: fr_wheel_joint
     rear_left_wheel_name: rl_wheel_joint
