Added rosbot_xl_bringup multirobot test
Signed-off-by: Jakub Delicat <jakub.delicat@husarion.com>

--- a/rosbot_xl_bringup/config/laser_filter.yaml
+++ b/rosbot_xl_bringup/config/laser_filter.yaml
@@ -4,8 +4,7 @@
       name: box_filter
       type: laser_filters/LaserScanBoxFilter
       params:
-        # This parameter is replaced in the launch file
-        # box_frame: base_link
+        box_frame: base_link
 
         max_x: 0.165
         min_x: -0.195 # 0.165 + 0.03 (wifi antenna)
