--- a/.github/workflows/industrial_ci.yaml
+++ b/.github/workflows/industrial_ci.yaml
@@ -39,10 +39,34 @@ jobs:
             - uses: actions/checkout@v3
             - name: Clone installation requirements
               shell: bash
-              run: python3 -m pip install -U vcstool && vcs import . < ./rosbot_xl/rosbot_xl_hardware.repos && vcs import . < ./rosbot_xl/rosbot_xl_simulation.repos
+              run: |
+                  python3 -m pip install -U vcstool &&
+                  vcs import . < ./rosbot_xl/rosbot_xl_hardware.repos &&
+                  vcs import . < ./rosbot_xl/rosbot_xl_simulation.repos
+
             - name: Copy only diff_drive_controller and imu_sensor_broadcaster, waits for features from ros2-control
               shell: bash
-              run: cp -r ros2_controllers/diff_drive_controller . && cp -r ros2_controllers/imu_sensor_broadcaster . && rm -rf ros2_controllers
+              run: |
+                  cp -r ros2_controllers/diff_drive_controller . &&
+                  cp -r ros2_controllers/imu_sensor_broadcaster . &&
+                  rm -rf ros2_controllers
+
+            - name: Copy only tf2_ros_py from geometry2, waits for https://github.com/ros2/geometry2/pull/641
+              shell: bash
+              run: |
+                  cp -r geometry2/tf2_ros_py . &&
+                  rm -rf geometry2
+
+            - name: Remove ign_ros2_control demo
+              shell: bash
+              run: rm -rf src/gazebosim/gz_ros2_control/ign_ros2_control_demos src/gazebosim/gz_ros2_control/gz_ros2_control_tests
+
+            # Package micro_ros_msgs does not have industrial ci and tests does not pass.
+            # For more information see https://github.com/micro-ROS/micro_ros_msgs/issues/7
+            - name: Remove tests from micro_ros_msgs
+              shell: bash
+              run: sed '/if(BUILD_TESTING)/,/endif()/d' src/micro_ros_msgs/CMakeLists.txt -i
+
             - uses: ros-industrial/industrial_ci@master
               env:
                   ROS_DISTRO: ${{matrix.ROS_DISTRO}}
