lint | added multirobot simulation tests
Signed-off-by: Jakub Delicat <jakub.delicat@husarion.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,13 +35,13 @@ repos:
       rev: 23.11.0
       hooks:
         - id: black
-          args: ["--line-length=99", "--preview"]
+          args: ["--line-length=99", "--experimental-string-processing"]
 
     - repo: https://github.com/PyCQA/flake8
       rev: 6.1.0
       hooks:
         - id: flake8
-          args: ["--ignore=E501,W503,E203"] # ignore too long line and line break before binary operator,
+          args: ["--ignore=E501,W503"] # ignore too long line and line break before binary operator,
                                        # black checks it
 
     - repo: local
