added multirobot tests | added tf_ros2_py dependency to the rosbot_ros
Signed-off-by: Jakub Delicat <jakub.delicat@husarion.com>

--- a/rosbot_xl_bringup/package.xml
+++ b/rosbot_xl_bringup/package.xml
@@ -27,6 +27,7 @@
   <test_depend>launch</test_depend>
   <test_depend>launch_ros</test_depend>
   <test_depend>launch_pytest</test_depend>
+  <test_depend>tf2_ros_py</test_depend>
 
   <test_depend>laser_filters</test_depend>
   <test_depend>robot_localization</test_depend>
