added psutil dep
Signed-off-by: Jakub Delicat <jakub.delicat@husarion.com>

--- a/rosbot_xl_gazebo/package.xml
+++ b/rosbot_xl_gazebo/package.xml
@@ -39,6 +39,7 @@
   <test_depend>python-transforms3d-pip</test_depend>
   <test_depend>nav_msgs</test_depend>
   <test_depend>geometry_msgs</test_depend>
+  <test_depend>python3-psutil</test_depend>
 
   <test_depend>rosbot_xl_bringup</test_depend>
 
