--- a/rosbot_xl_bringup/package.xml
+++ b/rosbot_xl_bringup/package.xml
@@ -22,6 +22,7 @@
 
   <exec_depend>laser_filters</exec_depend>
   <exec_depend>robot_localization</exec_depend>
+  <exec_depend>micro_ros_agent</exec_depend>
 
   <test_depend>python3-pytest</test_depend>
   <test_depend>launch</test_depend>
