--- a/.github/workflows/industrial_ci.yaml
+++ b/.github/workflows/industrial_ci.yaml
@@ -39,7 +39,17 @@ jobs:
             - uses: actions/checkout@v3
             - name: Clone installation requirements
               shell: bash
-              run: python3 -m pip install -U vcstool && vcs import . < ./rosbot_xl/rosbot_xl_hardware.repos && vcs import . < ./rosbot_xl/rosbot_xl_simulation.repos
+              run: |
+                python3 -m pip install -U vcstool
+                vcs import . < ./rosbot_xl/rosbot_xl_hardware.repos
+                vcs import . < ./rosbot_xl/rosbot_xl_simulation.repos
+
+            # Package micro_ros_msgs does not have industrial ci and tests does not pass.
+            # For more information see https://github.com/micro-ROS/micro_ros_msgs/issues/7
+            - name: Remove tests from micro_ros_msgs
+              shell: bash
+              run: sed '/if(BUILD_TESTING)/,/endif()/d' src/micro_ros_msgs/CMakeLists.txt -i
+
             - uses: ros-industrial/industrial_ci@master
               env:
                   ROS_DISTRO: ${{matrix.ROS_DISTRO}}
