--- a/.github/workflows/industrial_ci.yaml
+++ b/.github/workflows/industrial_ci.yaml
@@ -36,13 +36,20 @@ jobs:
         runs-on: ubuntu-latest
         timeout-minutes: 16
         steps:
-            - uses: actions/checkout@v3
+            - name: Checkout
+              uses: actions/checkout@v3
+
+            - name: Copy to src
+              run: |
+                  mkdir -p src
+                  find . -maxdepth 1 -not -name src -not -name . -exec mv {} src/ \;
+
             - name: Clone installation requirements
               shell: bash
               run: |
                 python3 -m pip install -U vcstool
-                vcs import . < ./rosbot_xl/rosbot_xl_hardware.repos
-                vcs import . < ./rosbot_xl/rosbot_xl_simulation.repos
+                vcs import src < src/rosbot_xl/rosbot_xl_hardware.repos
+                vcs import src < src/rosbot_xl/rosbot_xl_simulation.repos
 
             # Package micro_ros_msgs does not have industrial ci and tests does not pass.
             # For more information see https://github.com/micro-ROS/micro_ros_msgs/issues/7
