--- a/rosbot_xl_bringup/package.xml
+++ b/rosbot_xl_bringup/package.xml
@@ -24,6 +24,9 @@
   <exec_depend>robot_localization</exec_depend>
   <exec_depend>micro_ros_agent</exec_depend>
 
+  <!-- Microros agent build dependency-->
+  <build_depend>git</build_depend>
+
   <test_depend>python3-pytest</test_depend>
   <test_depend>launch</test_depend>
   <test_depend>launch_ros</test_depend>
